--- a/client/index.html
+++ b/client/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/notebook.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Virtual Notebook - Share and express your notes with the world" />
+    <meta name="description" content="EnglishArchive - Archive and share your English learning notes with the world" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
-    <title>Virtual Notebook</title>
+    <title>EnglishArchive</title>
   </head>
   <body>
     <div id="root"></div>
